modules/library/render/src/test/java/org/geotools/renderer/lite/gridcoverage2d/BaseCoverageProcessingNodeTest#dispose().mjava
    @Test
    public final void dispose() {

        Assert.assertNotNull(testedObject.getOutput());
        // dispose
        testedObject.dispose(true);
        // do nothing
        testedObject.dispose(true);
        try {
            // trying to get the output from a disposed coverage should throw an
            // error
            testedObject.getOutput();
            Assert.assertTrue(false);
        } catch (Exception e) {

        }
    }

